@@ -10,19 +10,19 @@ subroutine deriv1(z,nz,y,y0,yNp1,yp)
   integer j
   real*8 hm,hp,c1,c2,c3
 
-  hp=z(2)-z(1)
-  !hm=z(1)
-  c1=z(1)/(hp*z(2))
-  c2= 1/z(1) - 1/(z(2)-z(1))
-  c3=-hp/(z(1)*z(2))
-  yp(1)=c1*y(2) + c2*y(1) + c3*y0
+  hp = z(2)-z(1)
+  !hm = z(1)
+  c1 = z(1)/(hp*z(2))
+  c2 = 1/z(1) - 1/(z(2)-z(1))
+  c3 = -hp/(z(1)*z(2))
+  yp(1) = c1*y(2) + c2*y(1) + c3*y0
   do j=2,nz-1
-     hp=z(j+1)-z(j)
-     hm=z(j)-z(j-1)
-     c1=+hm/(hp*(z(j+1)-z(j-1)))
-     c2= 1/hm - 1/hp
-     c3=-hp/(hm*(z(j+1)-z(j-1)))
-     yp(j)=c1*y(j+1) + c2*y(j) + c3*y(j-1)
+     hp = z(j+1)-z(j)
+     hm = z(j)-z(j-1)
+     c1 = +hm/(hp*(z(j+1)-z(j-1)))
+     c2 = 1/hm - 1/hp
+     c3 = -hp/(hm*(z(j+1)-z(j-1)))
+     yp(j) = c1*y(j+1) + c2*y(j) + c3*y(j-1)
   enddo
   yp(nz) = (yNp1 - y(nz-1))/(2.*(z(nz)-z(nz-1)))
 end subroutine deriv1
@@ -40,18 +40,18 @@ subroutine deriv2_full(z,nz,a,b,a0,b0,bNp1,yp2)
   integer j
   real*8 hm,hp,c1,c2,c3
   
-  c1=1./(z(1)*z(2))
-  c2=1./((z(2)-z(1))*z(1))
-  c3=1./((z(2)-z(1))*z(2))
+  c1 = 1./(z(1)*z(2))
+  c2 = 1./((z(2)-z(1))*z(1))
+  c3 = 1./((z(2)-z(1))*z(2))
   yp2(1) = -c2*a(1)*b(1) &   
        &  -c1*a0*b(1) + c1*(a(1)+a0)*b0 &
        &  -c3*a(2)*b(1) + c3*(a(1)+a(2))*b(2)
   do j=2,nz-1
-     hp=z(j+1)-z(j)
-     hm=z(j)-z(j-1)
-     c1=1./(hm*(z(j+1)-z(j-1)))
-     c2=1./(hp*hm)
-     c3=1./(hp*(z(j+1)-z(j-1)))
+     hp = z(j+1)-z(j)
+     hm = z(j)-z(j-1)
+     c1 = 1./(hm*(z(j+1)-z(j-1)))
+     c2 = 1./(hp*hm)
+     c3 = 1./(hp*(z(j+1)-z(j-1)))
      yp2(j) = -c2*a(j)*b(j) &   
           &  -c1*a(j-1)*b(j) + c1*(a(j)+a(j-1))*b(j-1) &
           &  -c3*a(j+1)*b(j) + c3*(a(j)+a(j+1))*b(j+1)
@@ -60,63 +60,8 @@ subroutine deriv2_full(z,nz,a,b,a0,b0,bNp1,yp2)
   ! lower bc: b_z = 0
   !yp(nz)= 2.*a(nz)*(b(nz-1)-b(nz))/(z(nz)-z(nz-1))**2
   !more general lower bc
-  yp2(nz)= a(nz)*(bNp1 - 2*b(nz) + b(nz-1))/(z(nz)-z(nz-1))**2
+  yp2(nz) = a(nz)*(bNp1 - 2*b(nz) + b(nz-1))/(z(nz)-z(nz-1))**2
 end subroutine deriv2_full
-
-
-
-subroutine deriv2_coeff(z,nz,c)
-  ! coefficients for second derivative (a*b_z)_z on irregular grid
-  ! 2nd order corner-free
-  implicit none
-  integer, intent(IN) :: nz
-  real*8, intent(IN) :: z(nz)
-  real*8, intent(OUT) :: c(3,nz)
-  integer j
-  real*8 hm,hp
-  
-  c(1,1)=1./(z(1)*z(2))
-  c(2,1)=1./((z(2)-z(1))*z(1))
-  c(3,1)=1./((z(2)-z(1))*z(2))
-
-  do j=2,nz-1
-     hp=z(j+1)-z(j)
-     hm=z(j)-z(j-1)
-     c(1,j)=1./(hm*(z(j+1)-z(j-1)))
-     c(2,j)=1./(hp*hm)
-     c(3,j)=1./(hp*(z(j+1)-z(j-1)))
-  enddo
-
-end subroutine deriv2_coeff
-
-
-
-subroutine deriv2(z,nz,a,b,a0,b0,bNp1,yp2,c)
-  ! second derivative (a*b_z)_z on irregular grid
-  ! fixed upper b.c. a(0)=a0, b(0)=b0
-  ! 2nd order corner-free
-  ! uses pre-made coefficients
-  implicit none
-  integer, intent(IN) :: nz
-  real*8, intent(IN) :: z(nz),a(nz),b(nz),a0,b0,bNp1,c(3,nz)
-  real*8, intent(OUT) :: yp2(nz)
-  integer j
-  
-  yp2(1) = -c(2,1)*a(1)*b(1) &   
-       &  -c(1,1)*a0*b(1)+c(1,1)*(a(1)+a0)*b0 &
-       &  -c(3,1)*a(2)*b(1)+c(3,1)*(a(1)+a(2))*b(2)
-
-  do concurrent (j=2:nz-1)
-     yp2(j) = -c(2,j)*a(j)*b(j) &   
-          &  -c(1,j)*a(j-1)*b(j) + c(1,j)*(a(j)+a(j-1))*b(j-1) &
-          &  -c(3,j)*a(j+1)*b(j) + c(3,j)*(a(j)+a(j+1))*b(j+1)
-  enddo
-
-  ! lower bc: b_z = 0
-  !yp(nz)= 2.*a(nz)*(b(nz-1)-b(nz))/(z(nz)-z(nz-1))**2
-  !more general lower bc
-  yp2(nz)= a(nz)*(bNp1 - 2*b(nz) + b(nz-1))/(z(nz)-z(nz-1))**2
-end subroutine deriv2
 
 
 
@@ -130,17 +75,17 @@ subroutine deriv2_simple(z,nz,y,y0,yNp1,yp2)
   integer j
   real*8 hm,hp,c1,c2,c3
 
-  c1=+2./((z(2)-z(1))*z(2))
-  c2=-2./((z(2)-z(1))*z(1))
-  c3=+2./(z(1)*z(2))
+  c1 = +2./((z(2)-z(1))*z(2))
+  c2 = -2./((z(2)-z(1))*z(1))
+  c3 = +2./(z(1)*z(2))
   yp2(1) = c1*y(2) + c2*y(1) + c3*y0
 
   do j=2,nz-1
-     hp=z(j+1)-z(j)
-     hm=z(j)-z(j-1)
-     c1=+2./(hp*(z(j+1)-z(j-1)))
-     c2=-2./(hp*hm)
-     c3=+2./(hm*(z(j+1)-z(j-1)))
+     hp = z(j+1)-z(j)
+     hm = z(j)-z(j-1)
+     c1 = +2./(hp*(z(j+1)-z(j-1)))
+     c2 = -2./(hp*hm)
+     c3 = +2./(hm*(z(j+1)-z(j-1)))
      yp2(j) = c1*y(j+1) + c2*y(j) + c3*y(j-1)
   enddo
 
@@ -157,14 +102,14 @@ real(8) function deriv1_onesided(j,z,nz,y)
   real(8), intent(IN) :: z(nz),y(nz)
   real(8) h1,h2,c1,c2,c3
   if (j<1 .or. j>nz-2) then
-     deriv1_onesided=-9999.
+     deriv1_onesided = -9999.
   else
      h1 = z(j+1)-z(j)
      h2 = z(j+2)-z(j+1)
-     c1=-(2*h1+h2)/(h1*(h1+h2))
-     c2= (h1+h2)/(h1*h2)
-     c3=-h1/(h2*(h1+h2))
-     deriv1_onesided=c1*y(j) + c2*y(j+1) + c3*y(j+2)
+     c1 = -(2*h1+h2)/(h1*(h1+h2))
+     c2 =  (h1+h2)/(h1*h2)
+     c3 = -h1/(h2*(h1+h2))
+     deriv1_onesided = c1*y(j) + c2*y(j+1) + c3*y(j+2)
   endif
 end function deriv1_onesided
 
