@@ -12,8 +12,8 @@ LFLAGS = -O2 -Wall
 
 
 common: generalorbit.o flux_noatm.o conductionQ.o conductionT.o \
-	tridag.o grids.o psv.o derivs.o psvco2.o julday.o \
-	ran2.o makefile 
+	tridag.o grids.o derivs.o psv.o psv2.o psv3.o psvco2.o \
+	julday.o ran2.o subl_h2o.o makefile 
 
 %.o:	%.f makefile
 	$(CC) $(CFLAGS) -c $<
