@@ -24,7 +24,7 @@ Mars Subsurface Ice Model (M-SIM)
 Mars/mars_thermal1d.f: (main program)  
 Mars/flux_mars.f90  
 Mars/marsorbit.f90  
-Mars/soilthprop.f90  
+Mars/soilthprop_mars.f90  
 Common/conductionQ.f90  
 Common/conductionT.f90  
 Common/grids.f  
@@ -54,7 +54,7 @@ Mars/jsub.f
 Mars/jsubv.f90  
 Mars/marsorbit.f90  
 Mars/flux_mars.f90  
-Mars/soilthprop.f90  
+Mars/soilthprop_mars.f90  
 Common/conductionQ.f90  
 Common/conductionT.f90  
 Common/tridag.for  
@@ -73,7 +73,7 @@ Mars/insol_driver.f90 (main program)
 Mars/tempr_driver.f90 (main program)  
 Mars/flux_mars.f90  
 Mars/generalorbit.f90  
-Mars/soilthprop.f90  
+Mars/soilthprop_mars.f90  
 Common/conductionQ.f90  
 Common/conductionT.f90  
 Common/grids.f  
@@ -92,7 +92,7 @@ Mars/fast_modules.f90
 Mars/fast_subs_univ.f90  
 Mars/fast_subs_exper.f90  
 Mars/fast_subs_mars.f90  
-Mars/soilthprop.f90  
+Mars/soilthprop_mars.f90  
 Common/conductionQ.f90  
 Common/conductionT.f90  
 Common/tridag.for  
